# auth0-example-rs-spa

./: Cargo.toml  LICENSE-MIT  README.md  env.sample  index.html  index.scss
src/: app.rs  main.rs
src/component/: content.rs  footer.rs  hero.rs  highlight.rs  loading.rs  mod.rs  navbar.rs
src/component/strap/: button.rs  collapse.rs  container.rs  dropdown.rs  dropdown_item.rs  dropdown_menu.rs  dropdown_toggle.rs  mod.rs  nav.rs  navbar.rs  navbar_brand.rs  navbar_toggler.rs  navitem.rs  navlink.rs
src/util/: content_data.rs  mod.rs
src/views/: external_api.rs  home.rs  mod.rs  profile.rs
