[package]
name = "auth0-example-rs-yew"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-oauth2 = { version = "0.5.0", features = ["openid"] }
yew-router = "0.17.0"
wasm-logger = "0.2.0"
log = "0.4.17"

openidconnect = { version = "2.2", optional = true, default-features = false, features = ["reqwest", "rustls-tls", "rustcrypto","accept-rfc3339-timestamps"] }
gloo-timers = "0.2.5"
humantime = "2.1.0"
chrono = { version = "0.4.23", features = ["wasmbind"] }

[patch.crates-io]
openidconnect = { git = "https://github.com/ctron/openidconnect-rs", rev = "6ca4a9ab9de35600c44a8b830693137d4769edf4" }

[features]
default = ["openid"]
openid = ["openidconnect", "yew-oauth2/openid"]
